[gd_scene load_steps=12 format=2]

[ext_resource path="res://puzzles/BasePuzzle/BasePuzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://puzzles/RopePuzzle/RopePuzzle.gd" type="Script" id=2]
[ext_resource path="res://ui/Textbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://puzzles/RopePuzzle/BurningRope.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/Semi-Coder-Regular.otf" type="DynamicFontData" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform int blurSize : hint_range(0,20); 

void fragment() 
{
COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, float(blurSize)/10.0); 
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blurSize = 10

[sub_resource type="Animation" id=3]
resource_name = "pop_in_center"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0236853 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 57.5, 22.5 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 5 )

[node name="RopePuzzle" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Intro" type="CanvasLayer" parent="." index="0"]
editor/display_folded = true
layer = 0

[node name="Blur" type="ColorRect" parent="Intro" index="0"]
visible = false
material = SubResource( 2 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 1, 1, 1, 0 )

[node name="Introbox" parent="Intro" index="1" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="Boxes" parent="Intro/Introbox/CanvasLayer" index="0"]
margin_top = -300.0
margin_bottom = 780.0

[node name="NameBoxOut" parent="Intro/Introbox/CanvasLayer/Boxes" index="0"]
visible = false

[node name="NameBoxIn" parent="Intro/Introbox/CanvasLayer/Boxes" index="1"]
visible = false

[node name="Name" parent="Intro/Introbox/CanvasLayer/Boxes" index="2"]
visible = false

[node name="TextBoxOut" parent="Intro/Introbox/CanvasLayer/Boxes" index="3"]
color = Color( 0.278431, 0.278431, 0.278431, 0.823529 )

[node name="TextBoxIn" parent="Intro/Introbox/CanvasLayer/Boxes" index="4"]
color = Color( 0.0470588, 0.0470588, 0.0470588, 0.901961 )

[node name="AnimationPlayer" parent="Intro/Introbox/CanvasLayer/Boxes" index="7"]
anims/pop_in_center = SubResource( 3 )

[node name="Rope1" parent="." index="1" instance=ExtResource( 4 )]
position = Vector2( 600, 120 )
points = PoolVector2Array( 0, 0, 0, 840 )
width = 200.0

[node name="Rope2" parent="." index="2" instance=ExtResource( 4 )]
position = Vector2( 1200, 120 )
points = PoolVector2Array( 0, 0, 0, 840 )
width = 200.0

[node name="Background" type="ColorRect" parent="." index="3"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="BlurZ0" type="ColorRect" parent="." index="4"]
editor/display_folded = true
material = SubResource( 2 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="SubmitBox" type="Control" parent="BlurZ0" index="0"]
editor/display_folded = true
margin_left = 1640.0
margin_top = 930.0
margin_right = 1870.0
margin_bottom = 1020.0

[node name="SubmitButton" type="TouchScreenButton" parent="BlurZ0/SubmitBox" index="0"]
position = Vector2( 115, 45 )
scale = Vector2( 2, 2 )
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="BlurZ0/SubmitBox" index="1"]
margin_right = 230.0
margin_bottom = 90.0
color = Color( 1, 0, 0, 0.780392 )

[node name="Label" type="Label" parent="BlurZ0/SubmitBox" index="2"]
margin_right = 230.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 4 )
text = "Confirmar!"
align = 1
valign = 1

[node name="TotalTime" type="Label" parent="." index="5"]
margin_left = 400.0
margin_right = 1400.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 8 )
text = "Tempo: 0 minutos"
align = 1
valign = 1

[connection signal="pressed" from="BlurZ0/SubmitBox/SubmitButton" to="." method="submit_answer"]

[editable path="Intro/Introbox"]
